--- a/numpy_arrays.ipynb
+++ b/numpy_arrays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d3d9c591-0237-413a-908e-3ded874f7340",
    "metadata": {},
    "outputs": [],
@@ -128,8 +128,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "84c1d1a1-8ca1-4924-a23c-72383396c7fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr =  np.zeros(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a379b55d-15ff-4aec-815a-ad6cb4060605",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f481b66b-687c-41e3-9592-82f201e9aaee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ar = np.zeros((6,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "36beb110-e32a-4bfd-838a-727367010cfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "227cae47-35ad-436d-b858-87342cfdba81",
    "metadata": {},
    "outputs": [],
    "source": []
